--- a/style.css
+++ b/style.css
@@ -3,8 +3,28 @@
  grid-template-columns: repeat(auto-fit, 250px);
  justify-content: space-evenly;
 }
-img {
+#thumbnailContainerElement img {
   display: inline-block;
   max-width: 200px;
   max-height: 200px;
+}
+
+#imageModal{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  background-color: #000000ee;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  padding: 5%;
+}
+
+#imageModal img {
+  max-width:100%;
+  max-height:100%;
+  
 }
