--- a/style.css
+++ b/style.css
@@ -1,15 +1,37 @@
-#thumbnailContainerElement {
- display: grid;
- grid-template-columns: repeat(auto-fit, 250px);
- justify-content: space-evenly;
-}
-#thumbnailContainerElement img {
-  display: inline-block;
-  max-width: 200px;
-  max-height: 200px;
+html {
+  background-color: rgb(90, 130, 204);
+  font-family: 'Nunito', sans-serif;
 }
 
-#imageModal{
+body {
+  margin: 0 3vw;
+}
+
+#thumbnailContainerElement {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 250px);
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  overflow: auto;
+  padding: 2px;
+}
+
+#thumbnailContainerElement > div {
+  justify-self: center;
+  align-self: center;
+}
+
+#thumbnailContainerElement img {
+  border-radius: 3px;
+  border: solid 3px white;
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
+  justify-self: stretch;
+  align-self: stretch;
+}
+
+#imageModal {
   position: fixed;
   top: 0px;
   left: 0px;
@@ -21,13 +43,37 @@
   align-items: center;
   visibility: hidden;
   padding: 5%;
+  z-index: 1;
 }
 
 #imageModal img {
-  max-width:100%;
-  max-height:100%;
+  max-width: 100%;
+  max-height: 100%;
+  box-shadow: 0px 0px 2px 2px rgb(198, 198, 198);
+}
+
+#paginationElement {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+
+#paginationElement button {
+  font-size: 16px;
+  padding: 12px;
+  margin: 5px;
 }
 
 #paginationElement button.active {
   font-weight: 700;
+  background-color: #888888;
+  color: white;
+}
+
+#dogBreedDiv {
+  position: relative;
+  text-align: center;
+  margin: 3vh 0;
+  font-size: 24px;
 }
