--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  margin: 0 3vw;
+  margin: 0;
 }
 
 #thumbnailContainerElement {
@@ -22,13 +22,12 @@ body {
 }
 
 #thumbnailContainerElement img {
+  grid-area: photo;
   border-radius: 3px;
   border: solid 3px white;
   object-fit: cover;
-  width: 100%;
-  max-height: 100%;
-  justify-self: stretch;
-  align-self: stretch;
+  max-width: 100%;
+  max-height: 250px;
 }
 
 #imageModal {
@@ -60,9 +59,11 @@ body {
 }
 
 #paginationElement button {
-  font-size: 16px;
-  padding: 12px;
-  margin: 5px;
+  font-size: 12px;
+  padding: 10px;
+  margin: 3px;
+  border-radius: 4px;
+  background-color: white;
 }
 
 #paginationElement button.active {
