--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 #thumbnailContainerElement {
   display: grid;
   grid-template-columns: repeat(auto-fit, 250px);
+  grid-gap: 1%;
   justify-content: space-evenly;
   align-content: space-evenly;
   overflow: auto;
